--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2, server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-352.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.17MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-181.6KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-536.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.20MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-476.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
