--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-416.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-407.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-781.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-319.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1024.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.50MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-536.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇳 中国-725.3KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
   - {name: 🇯🇵 日本-770.6KB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
+  - {name: 🇹🇭 泰国-1.89MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-867.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-491.4KB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-781.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1024.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-770.6KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-442.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
